--- a/Editor/FuryDB.Components.Editor.asmdef
+++ b/Editor/FuryDB.Components.Editor.asmdef
@@ -2,9 +2,9 @@
     "name": "FuryDB.Components.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:94f7169a9b3e416459f95ab592fd4ede",
-        "GUID:f616d2369cdff2245beb1e6de61fde50",
-        "GUID:48460ec9444ad6c4aa91608aca4afe8c"
+        "FuryDB",
+        "FuryDB.Editor",
+        "FuryDB.Components"
     ],
     "includePlatforms": [
         "Editor"
