--- a/Runtime/FuryDB.Components.asmdef
+++ b/Runtime/FuryDB.Components.asmdef
@@ -2,8 +2,8 @@
     "name": "FuryDB.Components",
     "rootNamespace": "",
     "references": [
-        "GUID:94f7169a9b3e416459f95ab592fd4ede",
-        "GUID:f616d2369cdff2245beb1e6de61fde50"
+        "FuryDB",
+        "FuryDB.Editor"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
