Add TextProcessorBase. Add dependency `com.pixelrebels.fury.strings`

--- a/Runtime/FuryDB.Components.asmdef
+++ b/Runtime/FuryDB.Components.asmdef
@@ -2,6 +2,7 @@
     "name": "FuryDB.Components",
     "rootNamespace": "",
     "references": [
+        "Fury.Strings",
         "FuryDB",
         "FuryDB.Editor"
     ],
