--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "https://pixel-rebels.com/"
   },
   "displayName": "FuryDB Components",
-  "description": "Unity Components for integration with FuryDB",
+  "description": "Unity Components for integration with FuryDB\n\nDependencies:\n- https://github.com/ze0nni/FDB.git\n- https://github.com/ze0nni/FuryStrings.git",
   "category": "Components",
   "version": "0.0.1",
   "keywords": [
